# ComfyUI-VideoActorExtract

./: .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml  requirements.txt
core/: config.py  model_utils.py  video_reader.py
docs/: architecture.md  requirements.md
examples/: README.md  video-actor-extract.json
js/: widget.js
nodes/: __init__.py  actor_extractor.py  select_preview.py
pipeline/: cropper.py  detector.py  identity.py  mask_tracker.py  merger.py  segmenter.py  tracker.py
tests/: diagnose_tracker.py  test_pipeline.py  test_pipeline_results.json
